# Shadow_hunter

./: .dockerignore  .gitignore  Dockerfile  README.md  cloud-run-config.yaml  cloudbuild.yaml  deploy.sh  docker-compose.yaml  pyproject.toml  run_local.py  setup_logging_sink.sh  setup_pubsub.sh  shadow_hunter.db  shadow_hunter.db-shm  shadow_hunter.db-wal  simulate_traffic.py
docs/: AI_ENGINE.md  ARCHITECTURE.md  Brief.docx  DEPLOYMENT.md  DEVELOPMENT.md  Future_scope.md  MODULES.md  README.md  ROADMAP.md  SECURITY.md  SH_Definitive_Guide.md  Shadow_Hunter_Definitive_Guide.md  System_Architecture_Quick_Guide.md  TECH_STACK.md  abstract.md  video_walkthrough_script.md
logs/: audit_ledger.jsonl
pkg/core/: interfaces.py
pkg/data/: ai_domains.py  corporate_assets.py  geoip.py  idp_mock.py  mitre_mapping.py
pkg/infra/: audit_store.py
pkg/infra/enterprise/: broker.py  store.py
pkg/infra/local/: broker.py  store.py
pkg/ingestion/: producer.py
pkg/models/: events.py
pkg/plugins/: dlp_engine.py
services/analyzer/: detector.py  engine.py  main.py
services/api/: dependencies.py  main.py
services/api/routers/: chat.py  compliance.py  copilot.py  defense.py  discovery.py  mitre.py  policy.py  reporting.py
services/dashboard/: package-lock.json  package.json  tailwind.config.js
services/dashboard/src/: Alerts.jsx  App.jsx  ComplianceBoard.jsx  (+7 more)
services/graph/: analytics.py
services/intelligence/: engine.py  soar.py
services/listener/: Dockerfile  main.py  sniffer.py
services/reporting/: pdf_generator.py
services/simulator/: traffic_generator.py
(+1 files in other folders)
